# nebula-collection-registry

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: json-validation.yml  pr_views_to_core.yml  tests.yml
collections/nebula-airbyte/blocks/: v0.2.0.json  v0.3.0.json  v0.3.2.json  v1.0.0.json
collections/nebula-airbyte/flows/: v0.2.0.json  v0.3.0.json  v1.0.0.json
collections/nebula-airbyte/workers/: v0.3.0.json
collections/nebula-aws/blocks/: v0.2.4.json  v0.2.5.json  v0.3.0.json  v0.3.1.json  v0.3.2.json  v0.3.4.json  v0.3.5.json  v0.3.6.json  v0.3.7.json  v0.4.0.json  v0.4.1.json  v0.4.10.json  v0.4.11.json  v0.4.12.json  v0.4.13.json  v0.4.2.json  v0.4.4.json  v0.4.5.json  v0.4.6.json  v0.4.7.json  v0.4.8.json  v0.4.9.json
collections/nebula-aws/flows/: v0.2.4.json  v1.0.0.json
collections/nebula-aws/workers/: v0.3.1.json  v0.3.2.json  v0.3.4.json  v0.3.5.json  v0.3.6.json  v0.3.7.json  v0.4.13.json  v0.4.5.json  v0.4.8.json
collections/nebula-azure/blocks/: v0.2.10.json  v0.2.11.json  v0.2.12.json  v0.2.3.json  v0.2.4.json  v0.2.5.json  v0.2.6.json  v0.2.8.json  v0.2.9.json  v0.3.0.json  v0.3.1.json  v0.3.3.json  v0.3.4.json  v0.3.5.json  v1.0.0.json
src/: generate_block_metadata.py  generate_flow_metadata.py  generate_worker_metadata.py  update_collection_metadata.py  utils.py
tests/: test_generate_worker_metadata.py  test_module.py  test_utils.py
views/: aggregate-block-metadata.json  aggregate-flow-metadata.json  aggregate-worker-metadata.json  demo-flows.json
(+282 files in other folders)
